--- a/package.json
+++ b/package.json
@@ -12,17 +12,11 @@
     },
     "devDependencies": {
         "axios": "^0.19",
-        "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^7.0",
-        "gulp-sass": "^4.0.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0",
-        "vue-template-compiler": "^2.6.11"
-    },
-    "dependencies": {
-        "foundation-sites": "^6.6.1"
+        "sass-loader": "^8.0.0"
     }
 }
